Please see NEWS for a summary of changes since the last release suitable
for announcements.

* Sun Aug 5 2012 Thunor <thunorsif@hotmail.com>
- Added support for the envvar GTKDIALOG_PIXMAP_PATH to find_pixmap().

* Sat Aug 4 2012 Thunor <thunorsif@hotmail.com>
- Refactored the window widget and added support for <input>,
  <input file>, refresh, save and clear ("title" is the item of data
  that is being manipulated).
- Added the "image-name" custom tag attribute for the window widget
  to set the title bar icon from a full path and filename.

* Thu Aug 2 2012 Thunor <thunorsif@hotmail.com>
- Checked through and tidied-up the launch and closewindow functions.
- Added a check when launch-ing that the window contains the required
  matching variable directive with a warning being displayed if missing.
- Added examples/miscellaneous/launch_and_closewindow.
- Added <input>, <input file> and refresh support to the timer widget.

* Mon Jul 30 2012 Thunor <thunorsif@hotmail.com>
- Refactored the radiobutton widget and added support for <input>,
  <input file> and refresh.
- Added clear function support to the radiobutton widget to make it
  consistent with the checkbox widget and support for save.
- Refactored the checkbox widget and added support for <input file> and
  save.

* Tue Jul 24 2012 Thunor <thunorsif@hotmail.com>
- Applied jamesbond's fix for the incorrectly ordered widgets on the
  Raspberry Pi (ARM).

* Thu Nov 22 2011 Thunor <thunorsif@hotmail.com>
- Added an example application PlayMusic.

* Thu Oct 6 2011 Thunor <thunorsif@hotmail.com>
- Added the option to dump the examples as suggested by Dougal.

* Sun Oct 2 2011 Thunor <thunorsif@hotmail.com>
- Fixed a bug that was causing slowness at start-up when loading the
  XML-like GUI description from an environment variable; loading from
  a file or stdin though are fine.

* Mon Sep 26 2011 Thunor <thunorsif@hotmail.com>
- Version 0.8.0 released (r306)
- Updated the documentation.
